[gd_scene load_steps=12 format=3 uid="uid://dg862ao01hldf"]

[ext_resource type="Texture2D" uid="uid://bj80w0w2ev1lf" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="1_in6kg"]
[ext_resource type="Script" path="res://ui/gamer_ui.gd" id="1_qasg7"]
[ext_resource type="Texture2D" uid="uid://c5dfr71323yqi" path="res://addons/Tiny Swords/Resources/Resources/M_Idle_(NoShadow).png" id="3_70c0b"]
[ext_resource type="Texture2D" uid="uid://b6pnu8611jxnm" path="res://addons/Tiny Swords/Resources/Resources/G_Idle_(NoShadow).png" id="4_mlycf"]

[sub_resource type="SystemFont" id="SystemFont_vd6ny"]
font_names = PackedStringArray("Fantasy")
font_weight = 700

[sub_resource type="LabelSettings" id="LabelSettings_l033f"]
font = SubResource("SystemFont_vd6ny")
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cb4qi"]
texture = ExtResource("1_in6kg")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
region_rect = Rect2(32, 40, 128, 136)

[sub_resource type="SystemFont" id="SystemFont_7fntl"]
font_names = PackedStringArray("Fantasy")
font_weight = 600

[sub_resource type="LabelSettings" id="LabelSettings_cy7o3"]
font = SubResource("SystemFont_7fntl")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_um3jj"]
atlas = ExtResource("3_70c0b")
region = Rect2(40, 48, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_anlan"]
atlas = ExtResource("4_mlycf")
region = Rect2(40, 48, 56, 56)

[node name="GamerUI" type="CanvasLayer"]
script = ExtResource("1_qasg7")

[node name="TimeLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_top = 19.0
offset_right = 20.5
offset_bottom = 42.0
grow_horizontal = 2
text = "08:50
"
label_settings = SubResource("LabelSettings_l033f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Banner" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_right = -13.0
offset_bottom = 107.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_cb4qi")

[node name="MeatLabel" type="Label" parent="Banner"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -50.5
offset_right = -3.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
text = "999"
label_settings = SubResource("LabelSettings_cy7o3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="Banner"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 70.0
offset_top = -50.5
offset_right = 137.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
text = "999"
label_settings = SubResource("LabelSettings_cy7o3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Meat" type="TextureRect" parent="Banner"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -301.0
offset_top = 9.0
offset_right = -173.0
offset_bottom = 137.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_um3jj")

[node name="Gold" type="TextureRect" parent="Banner"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -163.0
offset_top = 9.0
offset_right = -35.0
offset_bottom = 137.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_anlan")
